# OpenGL

./: CMakeLists.txt
include/: Animation.hpp  Menu.hpp  Shader.hpp  Text.hpp  Texture.hpp  main.hpp  math_3d.hpp
shaders/: fragment_shader_text  fragment_shader_texture  vertex_shader_text  vertex_shader_texture
src/: Animation.cpp  Menu.cpp  Shader.cpp  Text.cpp  Texture.cpp  main.cpp
